[gd_scene load_steps=5 format=3 uid="uid://bs5vg7l2g8kh"]

[ext_resource type="Script" path="res://scenes/popupscreen/popupscreen.gd" id="1_ubthj"]
[ext_resource type="Texture2D" uid="uid://bk1fs3ltygobx" path="res://graphics/PopUpInfoBox.png" id="2_txr6x"]
[ext_resource type="Texture2D" uid="uid://bqsfhnc8rsu3w" path="res://graphics/OK button.png" id="3_l53iu"]
[ext_resource type="Script" path="res://scenes/popupscreen/button/Label.gd" id="4_vg2e8"]

[node name="popUpScreen" type="Node2D"]
script = ExtResource("1_ubthj")

[node name="DialogBox" type="Sprite2D" parent="."]
texture = ExtResource("2_txr6x")

[node name="Button" type="Sprite2D" parent="DialogBox"]
position = Vector2(328, 311)
texture = ExtResource("3_l53iu")

[node name="ButtonLabel" type="Label" parent="DialogBox/Button"]
offset_left = -87.0
offset_top = -32.0
offset_right = 87.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 35
text = "LET'S GO"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_vg2e8")

[node name="LevelTitle" type="Label" parent="DialogBox"]
offset_left = -426.0
offset_top = -366.0
offset_right = 426.0
offset_bottom = -309.0
theme_override_font_sizes/font_size = 45
text = "LEVEL 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelInfo" type="Label" parent="DialogBox"]
offset_left = -434.0
offset_top = -293.0
offset_right = 436.0
offset_bottom = 216.0
theme_override_font_sizes/font_size = 25
text = "Information about background of the structure, the problem, and the assignment for the player"
autowrap_mode = 3
